// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Root should remember selected path and restore it on settings update: selectedChild  - from backend 1`] = `
Object {
  "name": "changed from backend!",
  "tags": Array [],
}
`;

exports[`Root should remember selected path and restore it on settings update: selectedChild 1`] = `
Object {
  "name": "",
  "tags": Array [],
}
`;

exports[`Root should remember selected path and restore it on settings update: selectionPath 1`] = `
Array [
  "form2List",
  0,
]
`;

exports[`Root should remember selected path and restore it on settings update: selectionPath 2`] = `
Array [
  "form2List",
  0,
]
`;

exports[`Root should support drafts wrapped in undo/redo middleware : DRAFT AFTER COMMIT 1`] = `
Draft {
  "data": Settings {
    "$": Object {
      "$modelId": "id-4",
      "form1List": Array [],
      "form2List": Array [],
      "name": "HELLO",
      "tags": Array [
        Object {
          "label": "tag2",
        },
      ],
    },
    "$modelType": "myApp/Settings",
  },
  "originalData": Settings {
    "$": Object {
      "$modelId": "id-4",
      "form1List": Array [],
      "form2List": Array [],
      "name": "HELLO",
      "tags": Array [
        Object {
          "label": "tag2",
        },
      ],
    },
    "$modelType": "myApp/Settings",
  },
}
`;

exports[`Root should support drafts wrapped in undo/redo middleware : DRAFT after direct modification 1`] = `
Draft {
  "data": Settings {
    "$": Object {
      "$modelId": "id-4",
      "form1List": Array [],
      "form2List": Array [],
      "name": "",
      "tags": Array [
        Object {
          "label": "tag2",
        },
      ],
    },
    "$modelType": "myApp/Settings",
  },
  "originalData": Settings {
    "$": Object {
      "$modelId": "id-4",
      "form1List": Array [],
      "form2List": Array [],
      "name": "",
      "tags": Array [
        Object {
          "label": "tag1",
        },
        Object {
          "label": "tag2",
        },
      ],
    },
    "$modelType": "myApp/Settings",
  },
}
`;

exports[`Root should support drafts wrapped in undo/redo middleware : Undo Events 1`] = `
Array [
  Object {
    "actionName": "arrayRemoveAt",
    "inversePatches": Array [
      Object {
        "op": "add",
        "path": Array [
          "tags",
          0,
        ],
        "value": Object {
          "label": "tag1",
        },
      },
    ],
    "patches": Array [
      Object {
        "op": "remove",
        "path": Array [
          "tags",
          0,
        ],
      },
    ],
    "targetPath": Array [],
    "type": "single",
  },
  Object {
    "actionName": "setName",
    "inversePatches": Array [
      Object {
        "op": "replace",
        "path": Array [
          "name",
        ],
        "value": "",
      },
    ],
    "patches": Array [
      Object {
        "op": "replace",
        "path": Array [
          "name",
        ],
        "value": "HELLO",
      },
    ],
    "targetPath": Array [],
    "type": "single",
  },
]
`;

exports[`Root should support drafts wrapped in undo/redo middleware : Undo Events with forms 1`] = `
Array [
  Object {
    "actionName": "arrayRemoveAt",
    "inversePatches": Array [
      Object {
        "op": "add",
        "path": Array [
          "tags",
          0,
        ],
        "value": Object {
          "label": "tag1",
        },
      },
    ],
    "patches": Array [
      Object {
        "op": "remove",
        "path": Array [
          "tags",
          0,
        ],
      },
    ],
    "targetPath": Array [],
    "type": "single",
  },
  Object {
    "actionName": "setName",
    "inversePatches": Array [
      Object {
        "op": "replace",
        "path": Array [
          "name",
        ],
        "value": "",
      },
    ],
    "patches": Array [
      Object {
        "op": "replace",
        "path": Array [
          "name",
        ],
        "value": "HELLO",
      },
    ],
    "targetPath": Array [],
    "type": "single",
  },
  Object {
    "actionName": "addForm1",
    "inversePatches": Array [
      Object {
        "op": "replace",
        "path": Array [
          "form1List",
          "length",
        ],
        "value": 0,
      },
    ],
    "patches": Array [
      Object {
        "op": "add",
        "path": Array [
          "form1List",
          0,
        ],
        "value": Object {
          "name": "",
          "tags": Array [],
        },
      },
    ],
    "targetPath": Array [],
    "type": "single",
  },
  Object {
    "actionName": "addForm1",
    "inversePatches": Array [
      Object {
        "op": "replace",
        "path": Array [
          "form1List",
          "length",
        ],
        "value": 1,
      },
    ],
    "patches": Array [
      Object {
        "op": "add",
        "path": Array [
          "form1List",
          1,
        ],
        "value": Object {
          "name": "",
          "tags": Array [],
        },
      },
    ],
    "targetPath": Array [],
    "type": "single",
  },
  Object {
    "actionName": "addForm2",
    "inversePatches": Array [
      Object {
        "op": "replace",
        "path": Array [
          "form2List",
          "length",
        ],
        "value": 0,
      },
    ],
    "patches": Array [
      Object {
        "op": "add",
        "path": Array [
          "form2List",
          0,
        ],
        "value": Object {
          "name": "",
          "tags": Array [],
        },
      },
    ],
    "targetPath": Array [],
    "type": "single",
  },
  Object {
    "actionName": "addForm2",
    "inversePatches": Array [
      Object {
        "op": "replace",
        "path": Array [
          "form2List",
          "length",
        ],
        "value": 1,
      },
    ],
    "patches": Array [
      Object {
        "op": "add",
        "path": Array [
          "form2List",
          1,
        ],
        "value": Object {
          "name": "",
          "tags": Array [],
        },
      },
    ],
    "targetPath": Array [],
    "type": "single",
  },
]
`;

exports[`Root should support drafts wrapped in undo/redo middleware : settings after commit 1`] = `
Settings {
  "$": Object {
    "$modelId": "id-4",
    "form1List": Array [
      Object {
        "name": "",
        "tags": Array [
          Object {
            "label": "tag1",
          },
          Object {
            "label": "tag2",
          },
        ],
      },
      Object {
        "name": "",
        "tags": Array [],
      },
    ],
    "form2List": Array [
      Object {
        "name": "",
        "tags": Array [],
      },
      Object {
        "name": "",
        "tags": Array [],
      },
    ],
    "name": "HELLO",
    "tags": Array [
      Object {
        "label": "tag2",
      },
    ],
  },
  "$modelType": "myApp/Settings",
}
`;

exports[`Root should support drafts wrapped in undo/redo middleware : settings before commit 1`] = `
Settings {
  "$": Object {
    "$modelId": "id-4",
    "form1List": Array [],
    "form2List": Array [],
    "name": "HELLO",
    "tags": Array [
      Object {
        "label": "tag2",
      },
    ],
  },
  "$modelType": "myApp/Settings",
}
`;

exports[`Root should support drafts wrapped in undo/redo middleware : tags form1 - 0 - 2 tags added 1`] = `
Array [
  Object {
    "label": "tag1",
  },
  Object {
    "label": "tag2",
  },
]
`;

exports[`Root should support drafts wrapped in undo/redo middleware : tags form1 - 0 - redo -> 2 tags again 1`] = `
Array [
  Object {
    "label": "tag1",
  },
  Object {
    "label": "tag2",
  },
]
`;

exports[`Root should support drafts wrapped in undo/redo middleware : tags form1 - 0 - undo -> 1 tag left 1`] = `
Array [
  Object {
    "label": "tag1",
  },
]
`;

exports[`Root should support path resolution: form2_1 path 1`] = `
Array [
  "form2List",
  0,
]
`;
